<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2012-2013 Andrew Neal
     Copyright (C) 2012-2014 The CyanogenMod Project
     Copyright (C) 2017-2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Music</string>
    <string name="array_dark_mode_off">Off</string>
    <string name="array_dark_mode_on">On</string>
    <string name="array_dark_mode_auto">Auto</string>
    <string name="array_dark_mode_system">System Default</string>
    <string name="array_dark_mode_battery">Set by Battery Saver</string>

    <!-- Page titles -->
    <string name="page_artists">Artists</string>
    <string name="page_albums">Albums</string>
    <string name="page_songs">Songs</string>
    <string name="page_playlists">Playlists</string>
    <string name="page_play_queue">Play Queue</string>

    <!-- Section Headers -->
    <string name="header_albums">Albums</string>
    <string name="header_all_songs">All Songs</string>

    <!-- Option menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_shuffle_item">Shuffle</string>
    <string name="menu_shuffle_all">Shuffle all</string>
    <string name="menu_shuffle_playlist">Shuffle playlist</string>
    <string name="menu_shuffle_album">Shuffle album</string>
    <string name="menu_shuffle_artist">Shuffle artist</string>
    <string name="menu_shuffle_top_tracks">Shuffle top tracks</string>
    <string name="menu_shuffle_recent">Shuffle recently played</string>
    <string name="menu_shuffle_last_added">Shuffle last added</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_clear_list">Clear list</string>
    <string name="menu_clear_queue">Clear queue</string>
    <string name="menu_save_queue">Save queue to playlist</string>
    <string name="menu_equalizer">Equalizer</string>

    <!-- Playlist items -->
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="remove_from_queue">Remove from queue</string>

    <!-- Sort orders -->
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="sort_order_entry_filename">Filename</string>

    <!-- Default playlist names -->
    <string name="playlist_last_added">Last added</string>
    <string name="playlist_recently_played">Recently played</string>
    <string name="playlist_top_tracks">My top tracks</string>

    <!-- AlertDialog items -->
    <string name="new_playlist">New playlist</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite">Overwrite</string>
    <string name="clear">Clear</string>
    <string name="new_playlist_name_template">Playlist <xliff:g id="number">%d</xliff:g></string>
    <string name="create_playlist_prompt">Playlist name</string>
    <string name="delete_dialog_title">Delete <xliff:g example="album" id="item">%s</xliff:g>?</string>
    <string name="clear_top_tracks_title">Clear top tracks?</string>
    <string name="clear_recent_title">Clear recently played?</string>
    <string name="clear_last_added">Clear last added?</string>
    <string name="cannot_be_undone">This cannot be undone</string>
    <string name="delete_warning">This will permanently delete the cached image entries</string>
    <string name="new_photo">Choose photo from Gallery</string>
    <string name="use_default">Use default photo</string>

    <!-- Context menu items -->
    <string name="context_menu_play_selection">Play</string>
    <string name="context_menu_play_next">Play next</string>
    <string name="context_menu_play_album">Play album</string>
    <string name="context_menu_more_by_artist">More by artist</string>
    <string name="context_menu_rename_playlist">Rename</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_fetch_album_art">Fetch album art</string>
    <string name="context_menu_fetch_artist_image">Fetch artist image</string>
    <string name="context_menu_remove_from_recent">Remove from recent</string>
    <string name="context_menu_use_as_ringtone">Use as ringtone</string>
    <string name="context_menu_remove_from_playlist">Remove from playlist</string>
    <string name="context_menu_change_image">Change image</string>

    <!-- Content descriptions -->
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_shuffle_all">Shuffle all</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_repeat_all">Repeat all</string>
    <string name="accessibility_repeat_one">Repeat one</string>

    <!-- Toast messages -->
    <string name="set_as_ringtone">\'<xliff:g example="Alarm Bell" id="name">%s</xliff:g>\' set as ringtone</string>

    <!-- Settings -->
    <string name="settings_storage_category">Storage</string>
    <string name="settings_delete_cache_title">Delete cache</string>
    <string name="settings_delete_cache_summary">Remove all cached images</string>
    <string name="settings_general_category">General</string>
    <string name="settings_show_music_visualization_title">Show music visualization</string>
    <string name="settings_use_blur_title">Blur background</string>
    <string name="settings_show_lyrics_title">Show song lyrics</string>
    <string name="settings_show_lyrics_summary">For songs that have an srt file</string>
    <string name="settings_shake_to_play">Shake to Play</string>
    <string name="settings_shake_to_play_summary">Shake your device to play next song</string>

    <!-- App widget -->
    <string name="app_widget_small">Music: 4 \u00d7 1</string>
    <string name="app_widget_large">Music: 4 \u00d7 2</string>
    <string name="app_widget_large_alt">Music: 4 \u00d7 2 (alternate)</string>

    <!-- Empty list / error messages -->
    <string name="no_effects_for_you">The equalizer could not be opened.</string>
    <string name="empty_recent_main">No recent songs</string>
    <string name="empty_recent">Songs you have listened to recently will show up here.</string>
    <string name="empty_playlist_main">No songs in playlist</string>
    <string name="empty_playlist_secondary">To add songs to this playlist, tap the options menu on a song, album or artist and select \"Add to playlist\".</string>
    <string name="empty_top_tracks_main">No top tracks</string>
    <string name="empty_top_tracks_secondary">The songs you listen to most will be added to this list.</string>
    <string name="empty_last_added_main">No songs added recently</string>
    <string name="empty_last_added">Songs you have added over the last month will be shown here.</string>
    <string name="empty_generic_main">No music found</string>
    <string name="empty_generic_secondary">To copy music from your computer to your device, use a USB cable.</string>
    <string name="empty_queue_main">No songs in play queue</string>
    <string name="empty_queue_secondary">To add songs to your Play Queue, tap the options menu on a song, album, or artist and select \"Add to queue\".</string>
    <string name="error_playing_track">Unable to play track %1$s</string>

    <!-- Section Headers -->
    <string name="header_unknown_year">Unknown year</string>
    <string name="header_less_than_30s">Less than 30 seconds</string>
    <string name="header_30_to_60_seconds">30 - 60 seconds</string>
    <string name="header_1_to_2_minutes">1 - 2 minutes</string>
    <string name="header_2_to_3_minutes">2 - 3 minutes</string>
    <string name="header_3_to_4_minutes">3 - 4 minutes</string>
    <string name="header_4_to_5_minutes">4 - 5 minutes</string>
    <string name="header_5_to_10_minutes">5 - 10 minutes</string>
    <string name="header_10_to_30_minutes">10 - 30 minutes</string>
    <string name="header_30_to_60_minutes">30 - 60 minutes</string>
    <string name="header_greater_than_60_minutes">More than 60 minutes</string>

    <string name="header_1_song">1 song</string>
    <string name="header_2_to_4_songs">2 - 4 songs</string>
    <string name="header_5_to_9_songs">5 - 9 songs</string>
    <string name="header_10_plus_songs">10+ songs</string>

    <string name="header_5_plus_albums">5+ albums</string>

    <string name="header_other">"Other"</string>

    <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>

    <string name="channel_music">Music playback</string>
    <string name="title_activity_osslicense">OSSLicense</string>
    <string name="md3notavailable">Not available yet!</string>
</resources>
