<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 Andrew Neal
  Copyright (C) 2014 The CyanogenMod Project
  Copyright (C) 2017-2020 The LineageOS Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_general_category" >

        <!-- Music visualizer -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="music_visualization"
            android:title="@string/settings_show_music_visualization_title" />

        <!-- Use blur -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="use_blur"
            android:title="@string/settings_use_blur_title" />

        <!-- Show Lyrics -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_lyrics"
            android:title="@string/settings_show_lyrics_title"
            android:summary="@string/settings_show_lyrics_summary"/>

        <!-- Shake to switch songs -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="shake_to_play"
            android:title="@string/settings_shake_to_play"
            android:summary="@string/settings_shake_to_play_summary"/>

    </PreferenceCategory>

    <!-- Storage catetory -->
    <PreferenceCategory android:title="@string/settings_storage_category" >

        <!-- Delete cache -->
        <Preference
            android:key="delete_cache"
            android:summary="@string/settings_delete_cache_summary"
            android:title="@string/settings_delete_cache_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="UI">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="md3"
            android:title="Material Design 3" />
        <ListPreference
            app:defaultValue="SYSTEM"
            app:entries="@array/language"
            app:entryValues="@array/language_value"
            app:key="locale"
            app:summary="%s"
            app:title="Pick language" />
        <ListPreference
            app:defaultValue="system"
            app:entries="@array/list_dark_mode"
            app:entryValues="@array/themeEntryArray"
            app:key="darkMode"
            app:summary="%s"
            app:title="Dark Mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference
            android:icon="@mipmap/ic_launcher"
            android:key="aboutver"
            android:summary="version 4.1.0\nBuilt 2 April 2022"
            android:title="jpb Music (Eleven)" />
    </PreferenceCategory>
</PreferenceScreen>
